frontend-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nginx-svc
  namespace: frontend
  labels:
    app.kubernetes.io/name: frontend-nginx-svc
    app.kubernetes.io/part-of: frontend-nginx-svc
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app.kubernetes.io/name: frontend-nginx-svc
    app.kubernetes.io/part-of: frontend-nginx-svc
